# agents-on-azure

./: .env.example  .gitignore  README.md  pyproject.toml  run_benchmarks.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  integration-tests.yml
docs/: azure-setup.md  getting-started.md
docs/architecture/: messaging-patterns.md  overview.md  performance-testing-plan.md
infra/bicep/: main.bicep
infra/bicep/modules/: app-insights.bicep  container-apps.bicep  event-grid.bicep  event-hubs.bicep  openai.bicep  service-bus.bicep  storage.bicep
infra/bicep/parameters/: dev.bicepparam  prod.bicepparam
infra/scripts/: deploy.sh  provision.sh.example  teardown.sh
samples/autogen/multi-agent-eventgrid/: README.md  pyproject.toml
samples/autogen/multi-agent-eventgrid/src/: main.py
samples/autogen/multi-agent-eventhub/: README.md  pyproject.toml
samples/autogen/multi-agent-eventhub/src/: main.py
samples/autogen/multi-agent-servicebus/: README.md  pyproject.toml
samples/autogen/multi-agent-servicebus/src/: main.py
samples/autogen/single-agent/: README.md  pyproject.toml
samples/autogen/single-agent/src/: main.py
samples/langgraph/multi-agent-eventgrid/: README.md  pyproject.toml
samples/langgraph/multi-agent-eventgrid/src/: main.py
samples/langgraph/multi-agent-eventhub/: README.md  pyproject.toml
samples/langgraph/multi-agent-eventhub/src/: main.py
samples/langgraph/multi-agent-servicebus/: README.md  pyproject.toml
samples/langgraph/multi-agent-servicebus/src/: main.py
samples/langgraph/single-agent/: README.md  pyproject.toml
samples/langgraph/single-agent/src/: main.py
samples/langgraph/single-agent/src/agents/: graph.py
samples/microsoft-agent-framework/multi-agent-eventgrid/: README.md  pyproject.toml
samples/microsoft-agent-framework/multi-agent-eventgrid/src/: main.py
samples/microsoft-agent-framework/multi-agent-eventhub/: README.md  pyproject.toml
samples/microsoft-agent-framework/multi-agent-eventhub/src/: main.py
samples/microsoft-agent-framework/multi-agent-servicebus/: README.md  pyproject.toml
samples/microsoft-agent-framework/multi-agent-servicebus/src/: main.py
samples/microsoft-agent-framework/single-agent/: .env.example  README.md  pyproject.toml
samples/microsoft-agent-framework/single-agent/src/: main.py
samples/semantic-kernel/multi-agent-eventgrid/: README.md  pyproject.toml
samples/semantic-kernel/multi-agent-eventgrid/src/: main.py
samples/semantic-kernel/multi-agent-eventhub/: README.md  pyproject.toml
samples/semantic-kernel/multi-agent-eventhub/src/: main.py
samples/semantic-kernel/multi-agent-servicebus/: .env.example  README.md  pyproject.toml
samples/semantic-kernel/multi-agent-servicebus/src/: main.py
samples/semantic-kernel/single-agent/: .env.example  README.md  pyproject.toml
samples/semantic-kernel/single-agent/src/: main.py
samples/semantic-kernel/single-agent/src/tools/: document_plugin.py
shared/: pyproject.toml
shared/azure_clients/: __init__.py  eventgrid_client.py  eventgrid_pipeline.py  eventgrid_publisher.py  eventhub_client.py  eventhub_pipeline.py  openai_client.py  servicebus_client.py  storage_queue_receiver.py
shared/benchmarks/: __init__.py  choreography_tracker.py  collector.py  enums.py  fanout_tracker.py  metrics.py  report.py  run.py  segments.py  timer_utils.py  ttft.py
shared/contracts/: __init__.py  messages.py  prompts.py  sample_document.py
shared/utils/: __init__.py  config.py  config_loader.py  logging_config.py  output.py  settings.py
tests/: conftest.py
tests/benchmarks/: test_choreography_tracker.py  test_collector.py  test_enums.py  test_fanout_tracker.py  test_metrics.py  test_report.py  test_run.py  test_segments.py  test_timer_utils.py  test_ttft.py
tests/e2e/: __init__.py  test_pipelines.py
tests/integration/: __init__.py  test_eventgrid.py  test_eventhubs.py  test_openai.py  test_servicebus.py
tests/unit/: __init__.py
tests/unit/autogen/: __init__.py  test_single_agent.py
tests/unit/langgraph/: __init__.py  test_single_agent.py
tests/unit/microsoft_agent_framework/: __init__.py  test_single_agent.py
tests/unit/semantic_kernel/: __init__.py  test_single_agent.py
