[project]
name = "ag-multi-agent-servicebus"
version = "0.1.0"
description = "AutoGen multi-agent pipeline with Azure Service Bus messaging"
requires-python = ">=3.11"

dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "azure-identity>=1.15.0",
    "azure-servicebus>=7.12.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
shared = { workspace = true }
