[project]
name = "lg-multi-agent-eventgrid"
version = "0.1.0"
description = "LangGraph multi-agent pipeline with Azure Event Grid messaging"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "azure-identity>=1.15.0",
    "azure-eventgrid>=4.20.0",
    "azure-storage-queue>=12.9.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
shared = { workspace = true }
